--- a/assets/style.css
+++ b/assets/style.css
@@ -8,7 +8,7 @@ body {
     line-height: 1.6;
     background-color:lavenderblush;
     color: #3a3a3a;
-    background-image: url('https://images.pexels.com/photos/5184327/pexels-photo-5184327.jpeg?auto=compress&cs=tinysrgb&w=600');
+    
 }
 
 header {
@@ -67,9 +67,9 @@ nav > a:hover {
     text-align: center;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
-    width:33.33%;
+    background: no-repeat top/ cover url('https://images.pexels.com/photos/5184327/pexels-photo-5184327.jpeg?auto=compress&cs=tinysrgb&w=600');
 }
 
 .banner-content {
