Change button color

--- a/assets/style.css
+++ b/assets/style.css
@@ -130,7 +130,7 @@ form input {
 }
 
 form button {
-    background: #3a3a3a;
+    background: lavenderblush;
     color: #fff;
     padding: 10px 20px;
     border: none;
