Add more text to about us section

--- a/assets/style.css
+++ b/assets/style.css
@@ -131,7 +131,7 @@ form input {
 
 form button {
     background: lavenderblush;
-    color: #fff;
+    color: #3a3a3a;
     padding: 10px 20px;
     border: none;
     border-radius: 5px;
