--- a/assets/style.css
+++ b/assets/style.css
@@ -22,6 +22,7 @@ header {
     justify-content: space-between;
     align-items: baseline;
     box-shadow: 0 2px 2px black;
+    flex-direction: column;
 }
 
 header .logo {
@@ -54,7 +55,7 @@ nav ul li a {
 }
 
 .nav-toggle-label {
-    font-size: 2rem;
+    font-size: 1rem;
 }
 
 nav > a:hover {
@@ -69,7 +70,7 @@ nav > a:hover {
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
-    background: no-repeat top/ cover url('https://images.pexels.com/photos/5184327/pexels-photo-5184327.jpeg?auto=compress&cs=tinysrgb&w=600');
+    background: no-repeat top/ cover url('https://www.pexels.com/photo/silhouette-of-person-raising-its-hand-268134/');
 }
 
 .banner-content {
